--- a/iPad_Buy.html
+++ b/iPad_Buy.html
@@ -97,7 +97,7 @@
                     text.innerText = i;
                     // console.log(data.type.color.filter(x=>Object.keys(x)==i));
                     let a=data.type.color.filter(x=>Object.keys(x)==i);
-                    console.log(Object.keys(Object.values(a[0])[0]))
+                    // console.log(Object.keys(Object.values(a[0])[0]))
                     circle.style.backgroundColor=Object.keys(Object.values(a[0])[0]);
                     title.append(exterior);
                 }
