--- a/iPad_Buy.html
+++ b/iPad_Buy.html
@@ -168,7 +168,7 @@
         }
         function showfinalprice(){
             document.querySelector(".buy p").innerText=`NT$${price}起`;
-                
+            document.querySelector("footer p:nth-child(1)").innerText=`NT$${price}`;
         }
 
         function color(){
